@@ -1,3 +1,8 @@
+Tue Feb 15 13:14:31 CET 2000  Sven Neumann <sven@gimp.org>
+
+	* plug-ins/common/unsharp.c: 
+	updates from author  Winston Chang <wchang3@students.wisc.edu> 
+
 2000-02-15  Tor Lillqvist  <tml@iki.fi>
 
 	* libgimp/gimp.def
